<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cardview_nowplaying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/card_img_poster"
                android:layout_width="88dp"
                android:layout_height="104dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/card_txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/title"
                android:fontFamily="serif-monospace"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_img_poster"
                app:layout_constraintTop_toTopOf="@+id/card_img_poster" />

            <TextView
                android:id="@+id/card_txt_releasedate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title"
                android:fontFamily="monospace"
                android:text="@string/subtitle"
                android:textColor="@color/dark_grey"
                app:layout_constraintBottom_toBottomOf="@+id/card_img_poster"
                app:layout_constraintEnd_toEndOf="@+id/card_txt_title"
                app:layout_constraintStart_toStartOf="@+id/card_txt_title" />

            <TextView
                android:id="@+id/card_txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/subtitle"
                android:maxLines="3"
                android:text="@string/subtitle"
                android:textColor="@color/gold"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/card_txt_releasedate"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toEndOf="@+id/card_img_poster"
                app:layout_constraintStart_toStartOf="@+id/card_txt_releasedate"
                app:layout_constraintTop_toBottomOf="@+id/card_txt_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>